Fixing top and bottom things.

--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -27,4 +27,7 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <search-pager search-model.bind="searchModel" result-count.bind="resultCount" bottom="true"></search-pager>
+    </div>
 </template>
