Adding loading and better validation.

--- a/Source/TreasureGuide.Web/src/css/pagination.scss
+++ b/Source/TreasureGuide.Web/src/css/pagination.scss
@@ -21,3 +21,13 @@ aup-pagination {
         }
     }
 }
+
+.loading-area {
+    @extend ._width100;
+    @extend ._alignCenter;
+    padding: 60px 0;
+
+    i {
+        font-size: 8em;
+    }
+}
