--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -8,26 +8,29 @@
     <div class="row">
         <team-search model.bind="searchModel"></team-search>
     </div>
-    <div class="row">
-        <search-pager search-model.bind="searchModel" result-count.bind="resultCount"></search-pager>
-    </div>
-    <div class="row" if.bind="teams.length > 0">
-        <div class="col m6 teambox" repeat.for="team of teams">
-            <a route-href="route: teamDetails; params.bind: {id: team.id}">
-                <fieldset>
-                    <legend>
-                        ${team.name}
-                    </legend>
-                    <div class="_alignCenter">
-                        <team-display team.bind="team.teamUnits" size="small" in-line></team-display>
-                        <br />
-                        <stage-display stage-id.bind="team.stageId"></stage-display>
-                    </div>
-                </fieldset>
-            </a>
+    <loading-area if.bind="loading"></loading-area>
+    <div if.bind="!loading">
+        <div class="row">
+            <search-pager search-model.bind="searchModel" result-count.bind="resultCount"></search-pager>
         </div>
-    </div>
-    <div class="row">
-        <search-pager search-model.bind="searchModel" result-count.bind="resultCount" bottom="true"></search-pager>
+        <div class="row" if.bind="teams.length > 0">
+            <div class="col m6 teambox" repeat.for="team of teams">
+                <a route-href="route: teamDetails; params.bind: {id: team.id}">
+                    <fieldset>
+                        <legend>
+                            ${team.name}
+                        </legend>
+                        <div class="_alignCenter">
+                            <team-display team.bind="team.teamUnits" size="small" in-line></team-display>
+                            <br />
+                            <stage-display stage-id.bind="team.stageId"></stage-display>
+                        </div>
+                    </fieldset>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <search-pager search-model.bind="searchModel" result-count.bind="resultCount" bottom="true"></search-pager>
+        </div>
     </div>
 </template>
