--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -9,9 +9,8 @@
 
     <div class="row">
         <p class="text-info">
-            You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-            Please enter an email address for this site below and click the Register button to finish
-            logging in.
+            You've successfully authorized your <strong>@ViewData["LoginProvider"]</strong> account.
+            Please select a UserName and Email Address for NakamaDB below to finish registration.
         </p>
     </div>
     <div class="row">
