--- a/Source/TreasureGuide.Web/src/views/account/index.html
+++ b/Source/TreasureGuide.Web/src/views/account/index.html
@@ -1,10 +1,18 @@
 ﻿<template>
     <div with.bind="profile">
         <h1>${userName}</h1>
-        Id: ${id}
-        #: ${accountNumber}
-        Site: ${website}
-        Global: ${global}
-        Roles: <span repeat.for="role of roles">${role}</span>
+        <div class="_floatRight" if.bind="unitId">
+            <unit-display unit-id.bind="unitId"></unit-display>
+        </div>
+        <div if.bind="accountNumber">
+            <label for="accountNumber">Account:</label>
+            <span id="accountNumber">${accountNumber}</span>
+        </div>
+        <fieldset>
+            <legend>Roles</legend>
+            <ul>
+                <li repeat.for="role of roles">${role}</li>
+            </ul>
+        </fieldset>
     </div>
 </template>
