--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -1,7 +1,7 @@
 ﻿<template>
     <h1>${title}</h1>
     <form with.bind="team">
-        <fieldset>
+        <fieldset class="row">
             <legend>Team Info</legend>
             <div class="form-group">
                 <label for="nameInput">Name</label>
@@ -17,7 +17,7 @@
                 <stage-display id="stageInput" editable="true" stage-id.two-way="stageId"></stage-display>
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset class="row">
             <legend>Units and Sockets</legend>
             <div class="form-group _alignCenter">
                 <team-display team.two-way="teamUnits"
@@ -28,10 +28,10 @@
                 <socket-picker sockets.two-way="teamSockets"></socket-picker>
             </div>
         </fieldset>
-        <fieldset>
+        <fieldset class="row">
             <legend>Write-Ups</legend>
             <div class="form-group">
-                <label for="descriptionInput">Description</label>
+                <label for="descriptionInput">Summary</label>
                 <textarea id="descriptionInput"
                           class="_width100"
                           placeholder="A brief description of the team..."
@@ -42,7 +42,7 @@
                 <label for="guideInput">Guide</label>
                 <textarea id="guideInput"
                           class="_width100"
-                          placeholder="Details on how to use the team..."
+                          placeholder="In-depth details on how to use the team..."
                           value.bind="guide & validate"></textarea>
                 <div class="field-length">${guideLength}</div>
             </div>
@@ -54,9 +54,9 @@
                           value.bind="credits & validate"></textarea>
                 <div class="field-length">${creditLength}</div>
             </div>
-            <div class="row">
-                <input type="submit" class="_primary _floatRight" click.delegate="submit()" />
-            </div>
         </fieldset>
+        <div class="row">
+            <input type="submit" class="_primary _floatRight" click.delegate="submit()" />
+        </div>
     </form>
 </template>
